# platform-payment-sync

./: .gitignore  .pylintrc  Makefile  README.md  env.example  pyproject.toml  test_update_lead.py
app/: main.py
app/api/: webhook_payment.py
app/core/: __init__.py  amocrm_client.py  amocrm_mappings.py  settings.py
app/db/: __init__.py  event_logger.py
app/models/: __init__.py  payment_webhook.py
app/services/: payment_processor.py
doc/: README.md  db.md
etc/systemd/: payment-db-cleanup.service  payment-db-cleanup.timer  platform-payment-sync.service
scripts/: cleanup_db.py
tests/: test_config.py  test_update_lead.py
tests/amocrm_client/test_create_lead/: test_create_lead.py
tests/test_create_contact/: __init__.py  test_create_contact.py  test_create_lead.py
tests/test_create_lead/: test_create_lead.py
tests/test_find_contact/: __init__.py  test_find_contact.py
tests/test_setup_contact/: test_create_contact.py  test_setup_contact.py
tests/test_update_contact_fields/: test_update_contact_fields.py
tests/test_update_lead_fields/: __init__.py  test_update_lead_fields.py  test_update_lead_status.py
tests/test_utm_statistics/: test_utm_statistics.py
tests/tests_amocrm_client/: test_real_lead_creation.py
tests/tests_amocrm_client/test_create_contact/: test_create_lead.py
tests/tests_amocrm_client/test_create_task/: test_create_task.py
tests/tests_amocrm_client/test_find_contact/: test_find_contact.py
tests/tests_amocrm_client/test_find_op_lead/: test_find_op_lead.py
tests/tests_amocrm_client/test_get_lead_by_id/: test_get_lead_by_id.py
tests/tests_event_logger/: test_event_logger.py
tests/tests_payment_processor/: test_determine_pipeline.py
tests/tests_payment_webhook/: test_payment_webhook_real_data.py
tests/tests_webhook_payment/: amo.json  test_webhook_signature.py
(+7 files in other folders)
