[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[dependency-groups]
dev = [
  "pylint-pydantic (>=0.4.1,<0.5.0)",
  "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[project]
authors = [
  {email = "zhulikovnikita884@gmail.com", name = "nikitazulikov"}
]
dependencies = [
  "black (>=25.11.0,<26.0.0)",
  "fastapi (>=0.121.3,<0.122.0)",
  "flake8 (>=7.3.0,<8.0.0)",
  "flake8-pyproject (>=1.2.3,<2.0.0)",
  "isort (>=7.0.0,<8.0.0)",
  "mypy (>=1.18.2,<2.0.0)",
  "pydantic-settings (>=2.12.0,<3.0.0)",
  "pylint (>=4.0.3,<5.0.0)",
  "pytest (>=9.0.1,<10.0.0)",
  "requests (>=2.32.5,<3.0.0)",
  "tenacity (>=9.1.2,<10.0.0)",
  "toml-sort (>=0.24.3,<0.25.0)",
  "uvicorn (>=0.38.0,<0.39.0)",
  "amocrm-api (>=2.6.1,<3.0.0)",
  "httpx (>=0.28.1,<0.29.0)",
]
description = ""
name = "platform-payment-sync"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.flake8]
exclude = [
  "./.mypy_cache/*,",
  "./.venv/*",
  ".DS_Store",
  ".git",
  ".tox",
  "__pycache__"
]
ignore = ["E203", "E501", "E704", "W503"]
max-line-length = 128
plugins = ["flake8-pyproject"]

[tool.isort]
profile = "black"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports_for_stubs = true
ignore_missing_imports = true
local_partial_types = true
namespace_packages = true
pretty = true
show_error_context = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration tests requiring real external services (deselect with '-m \"not integration\"')"
]
